packages/silkenweb/tests/macro-ui/derive-element-unknown-attr.stderr
error: Unexpected token
 --> tests/macro-ui/derive-element-unknown-attr.rs:4:34
  |
4 | struct MyElement(#[element(target, xyz)] Div);
  |                                  ^
